--- a/PáginasHtml/Galeria.html
+++ b/PáginasHtml/Galeria.html
@@ -25,10 +25,10 @@
                 </a>
             <ul> 
              <li>
-                <a href="/PáginasHtml/Serv-Inst.html">Nuestro Hogar</a>
+                <a href="Serv-Inst.html">Nuestro Hogar</a>
             </li>
              <li> 
-                <a href="/PáginasHtml/Galeria.html">Galeria</a>
+                <a href="Galeria.html">Galeria</a>
             </li>
              <li>
                 <a href="#contacto">Contacto</a>
