--- a/PáginasHtml/Galeria.html
+++ b/PáginasHtml/Galeria.html
@@ -25,7 +25,10 @@
                 </a>
             <ul> 
              <li>
-                <a href="Serv-Inst.html">Nuestro Hogar</a>
+                <a href="Serv-Inst.html">Hogar</a>
+            </li>
+            <li>
+                <a href="Historia.html">Historia</a>
             </li>
              <li> 
                 <a href="Galeria.html">Galeria</a>
