--- a/PáginasHtml/Historia.html
+++ b/PáginasHtml/Historia.html
@@ -25,7 +25,10 @@
         </a>
     <ul> 
         <li>
-            <a href="Serv-Inst.html"> Nuestro Hogar</a>
+            <a href="Serv-Inst.html">Hogar</a>
+        </li>
+        <li>
+            <a href="Historia.html">Historia</a>
         </li>
          <li> 
             <a href="Galeria.html">Galeria</a>
@@ -47,10 +50,15 @@
         <div class="historia-redacción">             
            <p>
              Todo empieza con una persona, con una trayectoria en casa de monjas y siguiendo por la cruz roja. Totalmente dedicada al prójimo, 
-             decide abrir el primer Geriátrico, en la Ciudad Autónoma de Buenos Aires. Con un cambio de ciudad, nace como cuarta institución, el Geriatrico 
+             decide abrir el primer Hogar, en la Ciudad Autónoma de Buenos Aires. Con un cambio de ciudad, nace como cuarta institución, el Geriatrico 
              <q>Hogar Cristo Rey</q>, construido en una primera instancia, para el cuidado de personas con necesidad de asistencia. Hoy en dia, con una 
-             trayectoria de 60 años, podemos decir con orgullo, ...
+             trayectoria de 60 años, podemos decir con orgullo que el Geriátrico Hogar Cristo Rey se ha convertido en un referente en el cuidado y bienestar
+              de las personas mayores. Nuestro compromiso con el cuidado del prójimo nos ha llevado a ampliar nuestros servicios y adaptarnos a las necesidades 
+              cambiantes de la sociedad. 
           </p>
+        <button class="boton-historia">
+            <a href="Serv-Inst.html">Nuestro Hogar</a>
+        </button>
        </div>
    </div>         
     </section>
