--- a/PáginasHtml/Serv-Inst.html
+++ b/PáginasHtml/Serv-Inst.html
@@ -25,7 +25,10 @@
         </a>
     <ul> 
      <li>
-        <a href="Serv-Inst.html">Nuestro Hogar</a>
+        <a href="Serv-Inst.html">Hogar</a>
+    </li>
+    <li>
+        <a href="Historia.html">Historia</a>
     </li>
      <li> 
         <a href="Galeria.html">Galeria</a>
@@ -98,7 +101,10 @@
             <h4>Peluquería Opcional</h4>
             <ul>
                 <li>
-                    <p>Peluqueria privada, cuidando el estilo de nuestros hombres y mujeres.</p>
+                    <p> 
+                        Contamos con profesionales de peluquería que ofrecen servicios de corte de pelo, si la familia 
+                        así lo quisiera. Asegurando el cuidado personalizado y belleza natural.
+                    </p>
                 </li>
             </ul>              
             </div>
@@ -109,10 +115,28 @@
             <h4>Nutrición</h4>
             <ul>
                 <li>
-                    <p>Musica, juegos interactivos, bailes.</p>
+                    <p>
+                        Un servicio completo de nutrición diseñado especialmente para satisfacer las necesidades 
+                        alimentarias de nuestros residentes
+                    </p>
                 </li>
             </ul>         
         </div>
+
+        <div class="items">
+            <img src="" alt="">
+            <hr>
+            <h4>Seguridad Activa</h4>
+            <ul>
+                <li>
+                    <p> 
+                        Seguridad y cuidado integral de nuestros residentes mediante el uso de cámaras de seguridad. 
+                        Monitoreadas constantemente las 24 horas del día, permitiendo una respuesta inmediata ante 
+                        cualquier situación de emergencia o necesidad. 
+                    </p>
+                </li>
+            </ul>              
+            </div>
     </div>
     <h3>Instalaciones</h3>
     
