--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                 </a>    
             <ul> 
              <li>
-                <a href="./PáginasHtml/Historia.html">Nuestro Hogar</a>
+                <a href="./PáginasHtml/Serv-Inst.html">Hogar</a>
+            </li>
+            <li>
+                <a href="./PáginasHtml/Historia.html">Historia</a>
             </li>
              <li> 
                 <a href="./PáginasHtml/Galeria.html">Galeria</a>
@@ -41,9 +44,6 @@
              <li>
                 <a href="#contacto">Contacto</a>
             </li>
-            <!-- <li>   
-                <a href="#historia">Historia</a>
-            </li> -->
             </ul>
         </nav>
      </header>
@@ -60,15 +60,15 @@
             </p>
             </div>
             <div class="right-img"></div>
-            <div class="left-botton">
+            <div class="left-botton" id="left-botton-animation">
                 <p>Nos emociona que sepas un poco más de nosotros... <br> 
                     Te dejamos por aquí la hermosa historia de este Hogar.</p> 
-               <div class="historia-boton">
+               <button class="historia-boton">
                 <a href="./PáginasHtml/Historia.html">Historia</a>
-                </div>
+                </button>
             </div>
         </section>           
-          <section id="historia">
+        <!--   <section id="historia">
              <h2>Nuestra Historia</h2>
         <div class="flex-historia">
              <div class="img-abuelos"></div>
@@ -82,7 +82,7 @@
             </div>
         </div>         
          </section> 
-          <section id="servicios">
+          <section id="servicios"> -->
             <!-- <h2>Nuestro Hogar</h2>
         <div class="servicio-presentacion">
         <p class="servicio-descripcion">
@@ -90,7 +90,7 @@
             Queremos que conozcan un poca más de nosotros, es así que, le describimos los servicios que brindamos para nuestros adultos mayores y el lugar que compone a nuestro Hogar.
         </p>
         <img src="../Contenido/mobiliario-residencia-mayores.jpg" alt=""> -->
-            <h2>Servicios</h2>            
+           <!--  <h2>Servicios</h2>            
             <div class="servicios-contenedor">
                 <div class="items">
                     <img src="./Contenido/cuidado-de-la-salud.png" alt=""> 
@@ -143,8 +143,8 @@
                 </div>
             </div>                        
          </section> 
-         <section id="galeria">
-             <h2>Galeria</h2>
+         <section id="galeria"> -->
+             <!-- <h2>Galeria</h2>
              <div class="grid-galeria">
                 <div class="grid-items">
                     <a href="/Saved Pictures/192081998-fantasía-árbol-verde-ygdrasill-con-runa-en-el-tronco.webp">
@@ -240,7 +240,7 @@
                 </div>
              </div>
          </section>      
-     </main> 
+     </main>  -->
      <footer id="contacto"> <!-- ESto es una prueba -->
              
          <div>
@@ -270,6 +270,7 @@
          </small>
      </div>
      </footer>
+     <script src="Script.js"></script>
    </body>
 </html>
 
